# music-generation

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
planning/: clip_and_cross_attention.md  diffusion.md  inference_optimizations.md  iterating.md  lakh_model_iterating.md  maestro_model_iterating.md  remote_training.md  rope_and_yarn.md  seeding.md
src/midi_gen/data_management/: expert_descriptions.py  lakh_filter.py  midi_io.py  parsing.py  testing.py  tokenizing.py
src/midi_gen/exploration/: lakh_piano_stats.ipynb  midi_test.py  remi_bar_exploration.ipynb
src/midi_gen/model/inference/: base_inference.py  debugging.ipynb  statistics.py.ipynb  stats.py  testing.py
src/midi_gen/model/models/: GPTMidiV1.py  TransformerBlock.py
src/midi_gen/model/training/: data.py  positional_encodings.py  train_kaggle.ipynb  training_loop.py
src/midi_gen/serve/: api.py
src/midi_gen/serve/routes/: generate.py
src/midi_gen/serve/schemas/: generate.py
