[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "midi2audio>=0.1.1",
    "numpy>=2.4.4",
    "pretty-midi>=0.2.11",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/midi_gen"]

